<resources>
    <string name="app_name">BoardGamerApp</string>
    <string name="spielname">Spielname</string>
    <string name="dauer_minuten">Dauer (Minuten)</string>
    <string name="kategorie">Kategorie</string>
    <string name="speichern">Speichern</string>
    <string name="spiele">Spiele</string>
    <string name="default_spiele_name">Catan</string>
    <string name="default_kategorie_spieldauer">Strategie • 90 min</string>
    <string name="spiel_hinzuf_gen">Spiel hinzufügen</string>
    <string name="spiele_verwalten">Spiele verwalten</string>
    <string name="loeschen">Löschen</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="default_abstimmung">12 Votes</string>
    <string name="open_drawer">Menü öffnen</string>
    <string name="close_drawer">Menü schließen</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="was_soll_es_zu_essen_geben">Was soll es zu essen geben?</string>
    <string name="italienisch">Italienisch</string>
    <string name="deutsch">Deutsch</string>
    <string name="griechisch">Griechisch</string>
    <string name="order_reminder">BITTE JETZT DAS ESSEN BESTELLEN!</string>
    <string name="essen_kann_bestellt_werden">Essen kann bestellt werden.</string>
</resources>