<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spielname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etGameDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dauer_minuten"
            android:inputType="number"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etGameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kategorie"
            android:inputType="text"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btnSaveGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speichern"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>
